# pdf-search

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  PdfSearch.sln  README.md  main.py  poc.py  requirements.txt
.github/workflows/: build.yml
PdfSearch/: PathsFeeder.cpp  PathsFeeder.hpp  PdfConsumer.cpp  PdfConsumer.hpp  PdfFeeder.cpp  PdfFeeder.hpp  PdfImagesQueue.hpp  PdfPagesIterator.cpp  PdfPagesIterator.hpp  PdfSearch.cpp  PdfSearch.hpp  PdfSearch.vcxproj  PdfSearch.vcxproj.filters  QueuesDefinitions.hpp  Source.cpp  ThreadSafeQueue.cpp  ThreadSafeQueue.hpp
pdfsearch/: CMakeLists.txt  HpdfHandle.cpp  HpdfHandle.hpp  PdfFile.cpp  PdfFile.hpp  main.cpp
src/: image_processing.rs  image_search.rs  lib.rs  main.rs  pdf_processing.rs
tests/: fixtures.rs  integration_test.rs
