[package]
name = "pdf_image_search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdf_image_search"
path = "src/main.rs"

[[bin]]
name = "generate_samples"
path = "src/bin/generate_samples.rs"

[dependencies]
image = "0.25.4"
lopdf = "0.34.0"
glob = "0.3.1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
